--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "uuid": "^9.0.1",
+    "ws": "^8.15.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
+    "@types/ws": "^8.5.10",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
